removed many ids and replaced with classes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,53 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-
+    <div class="wrapper drk-blue">
+      <div class="top-bar">
+        <div class="top-top-bar">
+          <div class="pythonPNG">
+            <img src="python.png" alt="python logo">
+          </div>
+          <div class="search-bar align-right">
+            <div class="text-size">
+              <p><span>Text Size:</span> <a href="#">Normal</a> | <a href="#">Large</a></p>
+            </div>
+            <div class="search-bar-box rounded-corners2 shadow">
+              <form>
+                <input type="text" name="search" placeholder="Search" class="shadow"></input>
+                <input id="go-button" type="submit" class="shadow rounded-corners drk-blue white-text" value="GO"></input>
+              </form>
+            </div>
+          </div>
+        </div>
+        <div class="nav-bar rounded-corners shadow">
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Downloads</a></li>
+            <li><a href="#">Documentation</a></li>
+            <li><a href="#">Community</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Events</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="content-1">
+        <div class="c1-links"></div>
+        <div class="c1-content"></div>
+      </div>
+      <div class="content-2">
+        <div class="c2-content"></div>
+        <div class="c2-content"></div>
+      </div>
+      <div class="bottom-bar">
+        <div class="bottom-links">
+          <ul>
+            <li><a href="#">Help and General Contact</a></li>
+            <li><a href="#">Diversity Initiatives</a></li>
+            <li><a href="#">Submit Website Bugs</a></li>
+          </ul>
+        </div>
+        <div class="copyright"><p>Copyright ©2001-2016.</p></div>
+      </div>
+    </div>
   </body>
 </html>
