it's all done for now

--- a/index.html
+++ b/index.html
@@ -6,29 +6,39 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
+
     <!--wrapper-->
+
     <div class="wrapper drk-blue">
+
       <!--top bar-->
+
       <div class="top-bar">
         <div class="top-top-bar">
+
           <!--top-top-bar-->
+
           <div class="pythonPNG">
             <img src="python.png" alt="python logo">
           </div>
+
           <!--search bar-->
+
           <div class="search-bar align-right">
             <div class="text-size">
               <p><span>Text Size:</span> <a href="#">Normal</a> | <a href="#">Large</a></p>
             </div>
             <div class="search-bar-box rounded-corners2 shadow">
               <form>
-                <input type="text" name="search" placeholder="Search" class="shadow"></input>
-                <input id="go-button" type="submit" class="shadow rounded-corners drk-blue white-text" value="GO"></input>
+                <input type="text" name="search" placeholder="Search" class="shadow">
+                <input id="go-button" type="submit" class="shadow rounded-corners drk-blue white-text" value="GO">
               </form>
             </div>
           </div>
         </div>
+
         <!--nav bar-->
+
         <div class="nav-bar rounded-corners shadow">
           <ul>
             <li><a href="#">About</a></li>
@@ -40,58 +50,77 @@
           </ul>
         </div>
       </div>
-      <!--content 1-->
-      <div class="content-1 container">
-        <div class="c1-links container">
-          <ul>
-            <li><a href="#">Docs</a></li>
-            <li><a href="#">Audio/Visual Talks</a></li>
-            <li><a href="#">Beginner's Guide</a></li>
-            <li><a href="#">Developer's Guide</a></li>
-            <li><a href="#">PEP Index</a></li>
-            <li><a href="#">Python Books</a></li>
-            <li><a href="#">FAQ</a></li>
-          </ul>
-        </div>
-        <div class="c1-content container text-center">
-          <p class="white-text">First appearing in 1991, Python is a general-purpose, highlevel, interpreted programming language whose design focus emphasizes code readability. Whether for processing/analyzing data to powering many well-known applications, Python is not only a great language for new programmers but also powerful enough for seasoned developers building whatever they can think of</p>
-          <ul>
-            <li>Beautiful is better than ugly;</li>
-            <li>Explicit is better than implicit;</li>
-            <li>Simple is better than complex;</li>
-            <li>Complex is better than complicated;</li>
-            <li>Readability counts;</li>
-          </ul>
-          <p class="white-text">The Zen of Python</p>
+
+      <!--Content 1-->
+
+      <div class="content-1">
+        <div class="c1-block">
+
+        <!--Links-->
+          <div class="c1-links">
+            <ul>
+              <li><a href="#">Docs</a></li>
+              <li><a href="#">Audio/Visual Talks</a></li>
+              <li><a href="#">Beginner's Guide</a></li>
+              <li><a href="#">Developer's Guide</a></li>
+              <li><a href="#">PEP Index</a></li>
+              <li><a href="#">Python Books</a></li>
+              <li><a href="#">FAQ</a></li>
+            </ul>
+          </div>
+
+          <!--text block-->
+
+          <div class="c1-content text-center">
+            <p class="white-text">First appearing in 1991, Python is a general-purpose, highlevel, interpreted programming language whose design focus emphasizes code readability. Whether for processing/analyzing data to powering many well-known applications, Python is not only a great language for new programmers but also powerful enough for seasoned developers building whatever they can think of</p>
+            <ul>
+              <li>Beautiful is better than ugly;</li>
+              <li>Explicit is better than implicit;</li>
+              <li>Simple is better than complex;</li>
+              <li>Complex is better than complicated;</li>
+              <li>Readability counts;</li>
+            </ul>
+            <p class="white-text">The Zen of Python</p>
+          </div>
         </div>
       </div>
+
       <!--content 2-->
-      <div class="content-2 container">
-        <div class="c2-content container">
+
+      <div class="content-2">
+        <!--left block-->
+        <div class="c2-content">
           <div class="blue-bar"></div>
-          <h3>Getting Started</h3>
-          <p>Python can be easy to pick up whether you're a first time programmer or you're experienced with other languages. The following pages are a useful first step to get on your way writing programs with Python!</p>
-          <ul>
-            <li><a href="#">Beginner's Guide, Programmers</a></li>
-            <li><a href="#">Beginner's Guide, Non-Programmers</a></li>
-            <li><a href="#">Code sample and snippets for Beginners</a></li>
-          </ul>
+          <div class="c2-block">
+            <h3>Getting Started</h3>
+            <p>Python can be easy to pick up whether you're a first time programmer or you're experienced with other languages. The following pages are a useful first step to get on your way writing programs with Python!</p>
+            <ul>
+              <li><a href="#">Beginner's Guide, Programmers</a></li>
+              <li><a href="#">Beginner's Guide, Non-Programmers</a></li>
+              <li><a href="#">Code sample and snippets for Beginners</a></li>
+            </ul>
+          </div>
         </div>
-        <div class="c2-content container">
+        <!--Right block-->
+        <div class="c2-content">
           <div class="blue-bar"></div>
-          <h3>Applications</h3>
-          <p>The <span>Python Package Index (PyPI)</span> hosts thousands of third-party modules for Python. Both Python's standard library and the community-contributed modules allow for endless possiblities.</p>
-          <ul>
-            <li><a href="#">Web and Internet Development</a></li>
-            <li><a href="#">Database Access</a></li>
-            <li><a href="#">Desktop GUIs</a></li>
-            <li><a href="#">Network Programming</a></li>
-            <li><a href="#">Software and Game Development</a></li>
-          </ul>
+          <div class="c2-block">
+            <h3>Applications</h3>
+            <p>The <span>Python Package Index (PyPI)</span> hosts thousands of third-party modules for Python. Both Python's standard library and the community-contributed modules allow for endless possiblities.</p>
+            <ul>
+              <li><a href="#">Web and Internet Development</a></li>
+              <li><a href="#">Database Access</a></li>
+              <li><a href="#">Desktop GUIs</a></li>
+              <li><a href="#">Network Programming</a></li>
+              <li><a href="#">Software and Game Development</a></li>
+            </ul>
+          </div>
         </div>
       </div>
+
       <!--bottom bars-->
-      <div class="bottom-bar">
+
+      <div class="bottom-bar gradient">
         <div class="bottom-links">
           <ul>
             <li><a href="#">Help and General Contact</a></li>
